 - Enhancement  #1778 Add total number of titles to the XML files
 - Enhancement  #1787 Add ability to use file hash for anidb lookup
 - Fixed defect #1788 mjb.listing.clear.UNKNOWN should clear both "UNKNOWN" and "UNDEFINED"
 - Fixed defect #1795 mucommanderlight contains old version of commons-logging
 - Enhancement  #1796 Native RAR support
 - Enhancement  #1802 Configurable overlay and configurable border for thumbnails/posters 
 - Enhancement  #1803 Scan Directory name for Names of movies/tv shows with regex expressions
 - Enhancement  #1804 Adding a property to toggle IMDDB\Sratim cast source.
 - Fixed defect #1810 old-RAR format compatibility fixed

MovieJukebox 2.2
----------------
  - Enhancement   #323 TheMovieDB plugin created
  - Fixed defect  #558 New episodes from TV series didn't appear in the NEW Category.
  - Enhancement   #617 Add logo to cover art to indicate the presence of subtitle
  - Enhancement   #735 Allow users to tune category parameters on a per-category basis
  - Enhancement   #773 Save NFO files
  - Enhancement  #1440 Detect VOBSUB tracks in MKV files
  - Enhancement  #1497 Timeouts added for TheTVDb and TheMovieDb
  - Fixed defect #1546 New index not updating correctly
  - Fixed defect #1555 Genres added to ComingSoon plugin
  - Enhancement  #1560 Rescanning based on Jukebox Property changes
  - Fixed defect #1567 Download of French cover doesn't work properly
  - Fixed defect #1605 New IMDb site format breaks IMDb scanner (Updated for additional plot formats)
  - Enhancement  #1606 New fields for MovieListingPluginCustomCsv and limits for Cast and Genres fields
  - Fixed defect #1609 Only one fanart downloaded
  - Fixed defect #1616 KinoPoisk's plugin has problems when filename contains media-tags (like 'BLU-RAY')
  - Fixed defect #1617 Error when finding braces ({ or }) in filename
  - Fixed defect #1618 IMDB writers contain "and ? more credits"
  - Enhancement  #1621 Use original title instead of title for skins.