@@ -52,6 +52,7 @@ MovieJukebox 2.3 BETA
  - Fixed defect #1788 mjb.listing.clear.UNKNOWN should clear both "UNKNOWN" and "UNDEFINED"
  - Fixed defect #1795 mucommanderlight contains old version of commons-logging
  - Enhancement  #1796 Native RAR support
+ - Fixed defect #1800 Enable or Disable scan trailers ...function not clear
  - Enhancement  #1802 Configurable overlay and configurable border for thumbnails/posters 
  - Enhancement  #1803 Scan Directory name for Names of movies/tv shows with regex expressions
  - Enhancement  #1804 Adding a property to toggle IMDDB\Sratim cast source.
